
3.1.0
-----



3.0.9
-----
* Fixed os.getuid(), in enstaller/config.py not being called on Windows

* added --ignore-enstallerrc and --ignore-pydistutils-cfg option to
  easy_install


3.0.8
-----
* Removed subprocess call which assumed that enpkg was on the path, which
  causes problems when working with multiple Python environments.


3.0.7
-----
* Added upgrade/update and rollback to enpkg.


3.0.6
-----
* Allowing pre-uninstall scripts to be named EGG-INFO/uninstall.py,
  this change was made for purely historic reasons.  This change does not
  interfere with the standard convention that pre-uninstall scripts are
  named EGG-INFO/pre_uninstall.py, just as post-install scripts are named
  EGG-INFO/post_install.py.  Naming pre-uninstall scripts uninstall.py,
  is not recommended, but still possible.


3.0.5
-----
* Added .enstallerrc (enstaller.ini on Windows) which contains default
  repositories.
* Fixed bug which prevented uninstall scripts (in the EGG-INFO folder) to be
  executed.
* Added installation instructions to README.txt
* Added --debug option which makes it easy to track down which Python is
  running easy_install (in particular useful on systems which have no which
  command).


3.0.4
-----
* Enstaller is now consistently spelled with capital E
* Added --version option to both enpkg and easy_install
* Cleanup of setuptools code


3.0.1 - 3.0.3
-------------
Minor bug fixes


3.0.0
-----
* Re-architected and re-wrote Enstaller using portions of old source code.
* First public release on PyPi


All earlier versions
--------------------
All earlier versions of Enstaller used a completely different architecture
and design and were quickly deprecated from active usage due to instability
problems.
