@@ -1,7 +1,8 @@
 
 3.1.0
 -----
-
+* added the egginst package, an alternative for installing eggs, see
+  egginst/README.txt
 
 
 3.0.9
